Remove access tokens from .env
Removed sensitive access tokens from .env file.

--- a/.env
+++ b/.env
@@ -31,14 +31,14 @@ POSTGRESQL_DATABASE=lingopulse
 # WENXIN_MODEL=ernie-bot
 
 # Paddle (飞桨) Platform Configuration
-PADDLE_ACCESS_TOKEN=06e462ca9e7d5ad023db6205b7e4ecdd3f06ec2a
+PADDLE_ACCESS_TOKEN=
 PADDLE_BASE_URL=https://aistudio.baidu.com/llm/lmapi/v3
 PADDLE_MODEL_NAME=ERNIE-4.5-21B-A3B-Thinking
 PADDLE_TEMPERATURE=0.7
 PADDLE_MAX_TOKENS=1000
 
 # Baidu AI Studio Configuration
-BAIDU_ACCESS_TOKEN=06e462ca9e7d5ad023db6205b7e4ecdd3f06ec2a
+BAIDU_ACCESS_TOKEN=
 
 # Local Model Configuration
 LOCAL_MODEL_PATH=./models
